2008-07-24  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Func().
	* IEnumerable.cs: Add more Haskell-inspired extension methods:
	  - (cycle) .Cycle<S>(IEnumerable<S>)
	* Sequence.cs: Added; more Haskell-inspired methods that don't yet make
	  sense as extension methods:
	  - (iterate) Iterate<TSource>(TSource, Func<TSource, TSource>)
	  - (repeat) Repeat<TSource>(TSource)

2008-07-11  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add .Convert(), which is a simpler interface for
	  scanf(3)-like behavior than .ApplyPairs(), and also more limiting.
	  Allows usage such as `"w 1 1.5".Words().Convert(out a, out b, out c)`
	  where the default TypeConverter is used to perform the type
	  conversion based on the target type, so 
	    DateTime d; "1977-01-1".Scan (out d);
	  properly converts the string to a DateTime instance.

2008-07-11  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add .ApplyPairs(), which is a pair-wise application of
	  elements from an IEnumerable<T> to correspondingly indexed elements
	  from an Action<T> array.  The scenario is in the spirit of scanf(3),
	  where of sequence of values must be "scanned", converted, and stored
	  into a series of variables.  .ApplyPairs() uses delegates for the
	  conversion and storage portion.  So:
	    char buf[10]; int n; double d;
	    sscanf("w 1 1.5", "%s %d %lf", buf, &n, &d);
	  would become:
	    string s; int n; double d;
	    "w 1 1.5".Words().ApplyPairs (
	      v => s = v, 
	      v => n = int.Parse (v), 
	      v => d = double.Parse (v)
	    ).Apply ();
	  In this fashion the actual parsing of the input string is kept
	  separate from conversion & storage, so any routine to split a string
	  into a sequence could be used (e.g. string.Split(), regex, etc.).

2008-06-25  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: 
	  - Add additional Implode() overloads, so that we can efficiently 
	    perform per-node selection/modification.  In particular, to