@@ -41,4 +41,17 @@ namespace Mono.Rocks {
 			return func (self.Key, self.Value);
 		}
 	}
+
+	public static class KeyValuePair
+	{
+		public static KeyValuePair<TKey, TValue> Create<TKey, TValue> (TKey key, TValue value)
+		{
+			return new KeyValuePair<TKey, TValue> (key, value);
+		}
+
+		public static KeyValuePair<TKey, TValue>? Just<TKey, TValue> (TKey key, TValue value)
+		{
+			return new KeyValuePair<TKey, TValue> (key, value);
+		}
+	}
 }
