@@ -52,6 +52,23 @@ namespace Mono.Rocks {
 			while (true)
 				yield return value;
 		}
+
+		public static IEnumerable<TResult> GenerateReverse<TSource, TResult> (TSource value, Func<TSource, KeyValuePair<TResult, TSource>?> func)
+		{
+			Check.Func (func);
+
+			return CreateGenerateReverseIterator (value, func);
+		}
+
+		private static IEnumerable<TResult> CreateGenerateReverseIterator<TSource, TResult> (TSource value, Func<TSource, KeyValuePair<TResult, TSource>?> func)
+		{
+			KeyValuePair<TResult, TSource>? r;
+			while ((r = func (value)).HasValue) {
+				KeyValuePair<TResult, TSource> v = r ?? new KeyValuePair<TResult, TSource> ();
+				yield return v.Key;
+				value = v.Value;
+			}
+		}
 	}
 }
 
