@@ -62,5 +62,23 @@ namespace Mono.Rocks.Tests {
 			Assert.AreEqual ("1,1,1,1,1",
 					Sequence.Repeat (1).Take (5).Implode (","));
 		}
+
+		[Test]
+		[ExpectedException (typeof (ArgumentNullException))]
+		public void GenerateReverse_FuncNull ()
+		{
+			Func<int, KeyValuePair<int,int>?> f = null;
+			Sequence.GenerateReverse (0, f);
+		}
+
+		[Test]
+		public void GenerateReverse ()
+		{
+			// not entirely sure how you sanely test an infinite list...
+			Assert.AreEqual ("10,9,8,7,6,5,4,3,2,1",
+				Sequence.GenerateReverse (10, b => b == 0 
+						? null 
+						: KeyValuePair.Just (b, b-1)).Implode (","));
+		}
 	}
 }
