@@ -1,3 +1,7 @@
+2008-07-25  Jonathan Pryor  <jpryor@novell.com>
+
+	* SequenceTest.cs: Add tests for Sequence.GenerateReverse().
+
 2008-07-24  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerableTest.cs: Add tests for .Cycle().
